fix for tags and filter overflow

--- a/assets/scss/feed.scss
+++ b/assets/scss/feed.scss
@@ -142,6 +142,10 @@
       display: block;
       margin-bottom: 5px;
     }
+
+    @include media(sm) {
+      float: left;
+    }
   }
 
   // tags
@@ -159,6 +163,14 @@
         padding-bottom: 1px;
         white-space: nowrap;
       }
+
+      @include media(sm) {
+        width: calc(100% - 200px)
+      }
+    }
+
+    li {
+      margin-bottom: 6px;
     }
   }
 
@@ -175,20 +187,18 @@
   // time
   time {
     color: $gray-dark;
-    float: right;
     font-size: 13px;
-    margin-right: 28px;
+    position: absolute;
+      right: 50px;
+      bottom: 28px;
 
     @include media(xs) {
+      bottom: 52px;
       color: lighten($gray-dark,20%);
-      position: absolute;
-        top: 0;
-        right: 22px;
     }
 
     @media (max-width: 500px) {
-      margin-right: 15px;
-      right: 0;
+      right: 44px;
     }
   }
 
@@ -201,7 +211,7 @@
     overflow: hidden;
     position: absolute;
       right: 15px;
-      bottom: 22px;
+      bottom: 28px;
     width: 22px;
 
     &:active {
@@ -209,11 +219,7 @@
     }
 
     @include media(xs) {
-      bottom: 48px;
-    }
-
-    @media (max-width: 500px) {
-      display: none;
+      bottom: 54px;
     }
   }
 
